[package]
edition = "2021"
name = "solana-raydium-integration"
version = "0.1.0"

[[bin]]
name = "solana-raydium-integration"
path = "src/main.rs"

[dependencies]
anchor-client = "0.29.0"
anchor-spl = "0.29.0"
anyhow = "1.0.94"
env_logger = "0.11.5"
log = "0.4.22"
raydium-cp-swap = { git = "https://github.com/raydium-io/raydium-cp-swap", branch = "master", features = [
    "no-entrypoint",
    "client",
    "devnet",
] }
serde = "1.0.216"
serde_json = "1.0.133"
solana-program = ">=1.16, <1.18"
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"] }
spl-memo = "4.0.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"] }
spl-token-client = "0.7.0"
